<resources>
    <string name="app_name">PoketAssistant</string>
    <string name="action_settings">Settings</string>
    <string name="fakeMessage">Hi, I\'ve been missing you so much. by my heart... hope to catch you back soon..</string>
    <string name="fakeNumber">To : 92233333</string>
    <string name="fakeDateTime">send by : 12/12/2016 3:45 pm</string>
    <string name="enter_mobile_number_hint">Enter mobile number</string>
    <string name="enter_msg_hint">Enter your message here</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="empty">&lt;empty&gt;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
