<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/toTextView"
            android:layout_weight="6"
            android:hint="@string/enter_mobile_number_hint"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/contactButton"
            android:src="@drawable/ic_contacts_black"
            android:layout_weight="1"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/msgBodyTextView"
        android:hint="@string/enter_msg_hint"
        android:lines="2"
        android:maxLength="158"
        android:outlineProvider="paddedBounds"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/dateView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="00/00/0000 "
                android:id="@+id/dateTextView"
                android:freezesText="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/dateImageView"
                android:src="@drawable/ic_insert_invitation_black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/timeView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="00:00 AM"
                android:id="@+id/timeTextView"
                android:freezesText= "true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/timeImageView"
                android:src="@drawable/ic_access_time" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submitButton"
            android:layout_weight="1"/>
        </LinearLayout>

</LinearLayout>