<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:backgroundTint="@android:color/secondary_text_dark">
    <android.support.v7.widget.CardView
        android:id="@+id/cvMsgRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/msgRowImageView"
            android:src="@android:drawable/ic_dialog_email"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fakeNumber"
                android:id="@+id/toTextView"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/msgBodyTextView"
                android:layout_alignStart="@+id/msgBodyTextView" />
            <TextView
                android:id="@+id/msgBodyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fakeMessage"
                android:ellipsize="end"
                android:singleLine="true"
                android:textStyle="bold"
                android:layout_below="@+id/toTextView"
                android:layout_toRightOf="@+id/msgRowImageView"
                android:layout_toEndOf="@+id/msgRowImageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/fakeDateTime"
                android:id="@+id/sendingTimeTextView"
                android:layout_below="@+id/msgBodyTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>